--- a/app/src/main/res/layout/activity_history_list.xml
+++ b/app/src/main/res/layout/activity_history_list.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -20,5 +18,5 @@
         android:text="No history"
         android:textColor="#000"
         android:textSize="15dp"
-        android:visibility="invisible"></TextView>
+        android:visibility="invisible" />
 </RelativeLayout>
