--- a/app/src/main/res/layout/history_list.xml
+++ b/app/src/main/res/layout/history_list.xml
@@ -10,14 +10,14 @@
         android:padding="5dp">
 
         <LinearLayout
-            android:id="@+id/Username"
+            android:id="@+id/history_username"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
             android:layout_marginLeft="10dp">
 
             <TextView
-                android:id="@+id/from_name"
+                android:id="@+id/history_from_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="name1"
@@ -31,10 +31,10 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical|center_horizontal"
                 android:layout_marginHorizontal="5dp"
-                android:src="@drawable/arrow"></ImageView>
+                android:src="@drawable/arrow" />
 
             <TextView
-                android:id="@+id/to_name"
+                android:id="@+id/history_to_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="name2"
@@ -46,20 +46,20 @@
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/Username"
+            android:layout_below="@id/history_username"
             android:layout_marginLeft="10dp"
             android:layout_marginTop="5dp">
 
             <TextView
-                android:id="@+id/date"
+                android:id="@+id/history_date"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="date"
-                android:textSize="15dp"></TextView>
+                android:textSize="15dp" />
         </LinearLayout>
 
         <LinearLayout
-            android:id="@+id/Amount"
+            android:id="@+id/history_amount"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
@@ -72,7 +72,7 @@
                 android:text="Rs."
                 android:textColor="#E66F6F"
                 android:textSize="15sp"
-                android:textStyle="bold"></TextView>
+                android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/amount"
@@ -84,25 +84,25 @@
                 android:textStyle="bold" />
 
             <TextView
-                android:id="@+id/rupeeslash"
+                android:id="@+id/rupee_slash"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text=" /-"
                 android:textColor="#E66F6F"
                 android:textSize="15sp"
-                android:textStyle="bold"></TextView>
+                android:textStyle="bold" />
         </LinearLayout>
 
         <TextView
             android:id="@+id/transaction_status"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/Amount"
+            android:layout_below="@id/history_amount"
             android:layout_alignParentRight="true"
             android:layout_marginTop="8dp"
             android:layout_marginRight="10dp"
             android:text="Transaction status"
             android:textSize="15sp"
-            android:textStyle="bold"></TextView>
+            android:textStyle="bold" />
     </RelativeLayout>
 </androidx.cardview.widget.CardView>
