--- a/app/src/main/res/layout/activity_send_to_user.xml
+++ b/app/src/main/res/layout/activity_send_to_user.xml
@@ -10,7 +10,7 @@
         android:layout_marginVertical="10dp"
         android:gravity="center_horizontal|center_vertical"
         android:text="Select a user to transfer money"
-        android:textColor="#E66F6F"
+        android:textColor="@color/colorPrimary"
         android:textSize="20sp"
         android:textStyle="bold" />
 
