--- a/app/src/main/res/layout/activity_user_data.xml
+++ b/app/src/main/res/layout/activity_user_data.xml
@@ -174,7 +174,7 @@
                     android:id="@+id/rupee"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Rs."
+                    android:text="₹"
                     android:textColor="#000"
                     android:textSize="15sp" />
 
