--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,43 +7,52 @@
     tools:context=".MainActivity">
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:id="@+id/name_container"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
+        android:layout_marginTop="150dp"
+        android:gravity="center"
         android:orientation="vertical">
 
         <TextView
             android:id="@+id/app_name"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@id/logo"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="30dp"
             android:layout_marginBottom="10dp"
-            android:text="Baning System Application"
+            android:gravity="center"
+            android:text="Banking System"
+            android:textAllCaps="false"
+            android:textColor="@color/colorPrimary"
+            android:textSize="28sp" />
+
+        <TextView
+            android:id="@+id/app_name2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="0dp"
+            android:gravity="center"
+            android:text="Application"
             android:textAllCaps="false"
             android:textColor="@color/colorPrimary"
             android:textSize="28sp" />
 
         <ImageView
-            android:layout_width="200dp"
-            android:layout_height="200dp"
+            android:layout_width="300dp"
+            android:layout_height="250dp"
             android:layout_gravity="center"
-            android:layout_marginTop="10dp"
-            android:layout_marginBottom="10dp"
-            android:src="@drawable/bank"
-            app:tint="@color/colorPrimary" />
-
-        <Button
-            android:id="@+id/button_view_users"
-            android:layout_width="160dp"
-            android:layout_height="50dp"
-            android:layout_gravity="center"
-            android:layout_marginTop="20dp"
-            android:background="@drawable/rounded_button"
-            android:text="View Users"
-            android:textAllCaps="false"
-            android:textColorHint="@color/colorPrimary" />
+            android:src="@drawable/main_bank" />
     </LinearLayout>
+
+
+    <Button
+        android:id="@+id/button_view_users"
+        android:layout_width="160dp"
+        android:layout_height="50dp"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="80dp"
+        android:background="@drawable/rounded_button"
+        android:text="View Users"
+        android:textAllCaps="false"
+        android:textColorHint="@color/colorPrimary" />
 </RelativeLayout>
