--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -1,28 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center"
     android:orientation="vertical">
 
 
     <ImageView
         android:id="@+id/logo"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
+        android:layout_width="match_parent"
+        android:layout_height="300dp"
+        android:layout_above="@id/app_name"
         android:layout_centerHorizontal="true"
-        android:src="@drawable/bank"
-        android:visibility="invisible"
-        app:tint="@color/colorPrimary" />
+        android:src="@drawable/splash_bank"
+        android:visibility="invisible" />
 
     <TextView
         android:id="@+id/app_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/logo"
+        android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="30dp"
+        android:layout_marginBottom="200dp"
         android:text="BANKING SYSTEM"
         android:textAllCaps="false"
         android:textColor="@color/colorPrimary"
@@ -30,4 +29,4 @@
         android:textStyle="bold"
         android:visibility="invisible" />
 
-</LinearLayout>
+</RelativeLayout>
