--- a/app/src/main/res/layout/history_list.xml
+++ b/app/src/main/res/layout/history_list.xml
@@ -69,7 +69,7 @@
                 android:id="@+id/rupee"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Rs."
+                android:text="₹"
                 android:textColor="@color/black"
                 android:textSize="15sp"
                 android:textStyle="bold" />
