--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -5,28 +5,29 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-
-    <ImageView
-        android:id="@+id/logo"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="300dp"
-        android:layout_above="@id/app_name"
-        android:layout_centerHorizontal="true"
-        android:src="@drawable/splash_bank"
-        android:visibility="invisible" />
-
-    <TextView
-        android:id="@+id/app_name"
-        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="200dp"
-        android:text="BANKING SYSTEM"
-        android:textAllCaps="false"
-        android:textColor="@color/colorPrimary"
-        android:textSize="28sp"
-        android:textStyle="bold"
-        android:visibility="invisible" />
+        android:layout_marginTop="150dp"
+        android:orientation="vertical">
 
+        <ImageView
+            android:id="@+id/logo"
+            android:layout_width="match_parent"
+            android:layout_height="300dp"
+            android:layout_above="@id/app_name"
+            android:src="@drawable/splash_bank" />
+
+        <TextView
+            android:id="@+id/app_name"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/playfair_display"
+            android:gravity="center"
+            android:text="Banking System"
+            android:textAllCaps="false"
+            android:textColor="@color/colorPrimary"
+            android:textSize="28sp"
+            android:textStyle="bold" />
+    </LinearLayout>
 </RelativeLayout>
