--- a/app/src/main/res/layout/activity_transfer_money.xml
+++ b/app/src/main/res/layout/activity_transfer_money.xml
@@ -10,7 +10,7 @@
     tools:context=".TransferMoney">
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="100dp"
         android:orientation="vertical">
@@ -19,7 +19,6 @@
             android:id="@+id/paying_to_container"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
             android:gravity="center"
             android:orientation="horizontal">
 
@@ -41,34 +40,20 @@
                 android:textStyle="bold" />
         </LinearLayout>
 
-        <LinearLayout
-            android:id="@+id/phone_number_container"
+        <TextView
+            android:id="@+id/phone_number"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@id/paying_to_container"
             android:gravity="center"
-            android:orientation="horizontal">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="+91 "
-                android:textSize="20sp" />
-
-            <TextView
-                android:id="@+id/phone_number"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="1234567890"
-                android:textSize="20sp" />
-        </LinearLayout>
+            android:text="1234567890"
+            android:textSize="20sp" />
 
 
         <LinearLayout
             android:id="@+id/rupee_container"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/phone_number_container"
+            android:layout_below="@+id/phone_number"
             android:gravity="center"
             android:orientation="horizontal">
 
@@ -114,7 +99,7 @@
                 android:textStyle="bold" />
 
             <Button
-                android:id="@+id/send"
+                android:id="@+id/pay"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
@@ -122,7 +107,7 @@
                 android:layout_marginLeft="10dp"
                 android:backgroundTint="@color/colorPrimary"
                 android:paddingHorizontal="10dp"
-                android:text="Send"
+                android:text="Pay"
                 android:textAllCaps="false"
                 android:textColor="@color/white"
                 android:textSize="15dp"
